--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CafeAppCoursework</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="price_format">Price($): %s</string>
+    <string name="product_type">Product Type: %s</string>
+    <string name="product_name">Product Name: %s</string>
 </resources>
